# LVI-SAM

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: params_camera.yaml  params_lidar.yaml
docker/: Dockerfile  docker_start.md  ros_entrypoint.sh
launch/: run.launch
launch/include/: module_robot_state_publisher.launch  module_rviz.launch  module_sam.launch
launch/include/config/: rviz.rviz
msg/: cloud_info.msg
result/: traj.txt
src/lidar_odometry/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  utility.h
src/visual_odometry/visual_estimator/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/visual_odometry/visual_estimator/factor/: imu_factor.h  integration_base.h  projection_factor.cpp  projection_td_factor.cpp  projection_td_factor.h
src/visual_odometry/visual_estimator/initial/: initial_aligment.cpp  initial_alignment.h
src/visual_odometry/visual_estimator/utility/: visualization.cpp  visualization.h
src/visual_odometry/visual_feature/: feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
src/visual_odometry/visual_feature/camera_models/: Camera.cc  CameraFactory.cc  CameraFactory.h  CataCamera.cc  CostFunctionFactory.cc  CostFunctionFactory.h  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc  gpl.cc
src/visual_odometry/visual_loop/: keyframe.cpp  keyframe.h  loop_detection.cpp  loop_detection.h  loop_detection_node.cpp  parameters.h
